--- a/package.json
+++ b/package.json
@@ -1,24 +1,55 @@
 {
-  "name": "@korenezri/jsondb",
-  "version": "3.0.0",
-  "main": "backend/index.js",
-  "scripts": {
-    "test": "jest --verbose",
-    "start": "node index",
-    "dev": "nodemon index"
+  "_from": "@korenezri/jsondb@^2.0.0",
+  "_id": "@korenezri/jsondb@2.0.0",
+  "_inBundle": false,
+  "_integrity": "sha512-W7dGns2MRvGyrzruHxXkQWxApt58/XBkjf3n2dZvWdX6IiGayz26kIrbSYP8++nZ/i/83P8vq9llhMbNw8CVdw==",
+  "_location": "/@korenezri/jsondb",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@korenezri/jsondb@^2.0.0",
+    "name": "@korenezri/jsondb",
+    "escapedName": "@korenezri%2fjsondb",
+    "scope": "@korenezri",
+    "rawSpec": "^2.0.0",
+    "saveSpec": null,
+    "fetchSpec": "^2.0.0"
   },
-  "keywords": [],
-  "author": "Koren Ben Ezri",
-  "license": "ISC",
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/@korenezri/jsondb/-/jsondb-2.0.0.tgz",
+  "_shasum": "50a11377cac458e11c94aec7a04a65be4da832dc",
+  "_spec": "@korenezri/jsondb@^2.0.0",
+  "_where": "C:\\Users\\koren\\Documents\\GitHub\\URL-Shortener-Project",
+  "author": {
+    "name": "Koren Ben Ezri"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "uuid": "^8.3.2",
+    "cors": "^2.8.5"
+
+  },
+  "deprecated": false,
   "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "uuid": "^8.3.2"
-  }
+  "keywords": [],
+  "license": "ISC",
+  "main": "node_modules/@korenezri/jsondb/backend/index",
+  "name": "@korenezri/jsondb",
+  "scripts": {
+    "dev": "nodemon index",
+    "start": "node index",
+    "test": "jest --verbose"
+  },
+  "version": "2.0.0"
 }
