update package and debug

--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-  "_from": "@korenezri/jsondb@^2.0.0",
-  "_id": "@korenezri/jsondb@2.0.0",
+  "_from": "@korenezri/jsondb@^4.0.0",
+  "_id": "@korenezri/jsondb@4.0.0",
   "_inBundle": false,
-  "_integrity": "sha512-W7dGns2MRvGyrzruHxXkQWxApt58/XBkjf3n2dZvWdX6IiGayz26kIrbSYP8++nZ/i/83P8vq9llhMbNw8CVdw==",
+  "_integrity": "sha512-iBAVfGOJ26W7L1/Nyy+kkUCYl59DWQdOGh5dR0IeW8ZgjdUrpuB6Y90Ay8EM/HDJaxU7JQV1KzJmbJ5ca9LN6g==",
   "_location": "/@korenezri/jsondb",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@korenezri/jsondb@^2.0.0",
+    "raw": "@korenezri/jsondb@^4.0.0",
     "name": "@korenezri/jsondb",
     "escapedName": "@korenezri%2fjsondb",
     "scope": "@korenezri",
-    "rawSpec": "^2.0.0",
+    "rawSpec": "^4.0.0",
     "saveSpec": null,
-    "fetchSpec": "^2.0.0"
+    "fetchSpec": "^4.0.0"
   },
   "_requiredBy": [
-    "#USER",
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/@korenezri/jsondb/-/jsondb-2.0.0.tgz",
-  "_shasum": "50a11377cac458e11c94aec7a04a65be4da832dc",
-  "_spec": "@korenezri/jsondb@^2.0.0",
-  "_where": "C:\\Users\\koren\\Documents\\GitHub\\URL-Shortener-Project",
+  "_resolved": "https://registry.npmjs.org/@korenezri/jsondb/-/jsondb-4.0.0.tgz",
+  "_shasum": "a5d1526476188ff92bd32403237556b00bbe19f3",
+  "_spec": "@korenezri/jsondb@^4.0.0",
+  "_where": "C:\\Users\\Koren\\Documents\\GitHub\\Url-Shortener-Task",
   "author": {
     "name": "Koren Ben Ezri"
   },
   "bundleDependencies": false,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "uuid": "^8.3.2",
-    "cors": "^2.8.5"
+    "uuid": "^8.3.2"
   },
   "deprecated": false,
   "devDependencies": {
